--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -19,11 +19,11 @@ dependencies:
   - pytest-cov
 
   # Documentation
-  - pygments
-  
+  - pydata-sphinx-theme
+  - sphinx-design
+
   # Pip-only installs
   - pip:
     # Documentation
-    - rinohtype
-    - sphinx-rtd-theme
-    - pystemmer
+    - sphinx-copybutton
+    - sphinxnotes-strike
